--- a/app/app-module/src/main/res/layout/activity_send.xml
+++ b/app/app-module/src/main/res/layout/activity_send.xml
@@ -12,12 +12,14 @@
 
     <Button
         android:text="initiate command connection"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
         android:id="@+id/button"
-        android:onClick="initiateConnection" />
+        android:onClick="initiateConnection (SendActivity)"
+        android:layout_above="@+id/cancelButton"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="29dp"
+        android:layout_marginBottom="65dp" />
 
     <Button
         android:text="Cancel"
@@ -28,4 +30,15 @@
         android:layout_marginBottom="72dp"
         android:id="@+id/cancelButton"
         android:onClick="endConnection" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/button"
+        android:id="@+id/linlay">
+
+    </LinearLayout>
+
 </RelativeLayout>
