--- a/app/app-module/src/main/res/layout/activity_send.xml
+++ b/app/app-module/src/main/res/layout/activity_send.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:id="@+id/linlay"
+        android:id="@+id/runtime_button_parent"
         android:layout_above="@+id/disableSensorsButton">
 
     </LinearLayout>
