--- a/app/app-module/src/main/res/layout/activity_send.xml
+++ b/app/app-module/src/main/res/layout/activity_send.xml
@@ -25,8 +25,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/cancelButton"
-        android:onClick="endConnection"
+        android:onClick="endConnection (SendActivity)"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="46dp" />
+
+    <Button
+        android:text="Options"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linlay"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="45dp"
+        android:id="@+id/optionsBtn"
+        android:onClick="goToOptions" />
 
 </RelativeLayout>
