--- a/app/app-module/src/main/res/layout/activity_discovery.xml
+++ b/app/app-module/src/main/res/layout/activity_discovery.xml
@@ -30,11 +30,22 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
         android:id="@+id/startDiscovery"
         android:elevation="0dp"
         android:text="Discovery!"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/port_edit_text"
+        android:layout_alignTop="@+id/startDiscovery"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/startDiscovery"
+        android:hint="port (8888 if left free)" />
 
 </RelativeLayout>
