--- a/app/app-module/src/main/res/layout/activity_send.xml
+++ b/app/app-module/src/main/res/layout/activity_send.xml
@@ -33,10 +33,10 @@
         android:text="Options"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/linlay"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="45dp"
+        android:layout_marginEnd="43dp"
         android:id="@+id/optionsBtn"
-        android:onClick="goToOptions" />
+        android:onClick="goToOptions"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
