--- a/app/app-module/src/main/res/layout/activity_discovery.xml
+++ b/app/app-module/src/main/res/layout/activity_discovery.xml
@@ -16,7 +16,8 @@
         android:id="@+id/possibleConnections"
         android:layout_alignParentStart="true"
         android:headerDividersEnabled="false"
-        android:clickable="true" />
+        android:clickable="true"
+        android:layout_above="@+id/device_name_edit_text" />
 
     <ProgressBar
         android:id="@+id/discovery_progress_spinner"
@@ -47,5 +48,16 @@
         android:layout_alignParentEnd="true"
         android:layout_toEndOf="@+id/startDiscovery"
         android:hint="port (8888 if left free)" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:layout_above="@+id/port_edit_text"
+        android:id="@+id/device_name_edit_text"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:hint="device name" />
 
 </RelativeLayout>
