--- a/app/app-module/src/main/res/menu/menu_activity_send.xml
+++ b/app/app-module/src/main/res/menu/menu_activity_send.xml
@@ -8,4 +8,10 @@
         android:id="@+id/menu_disconnect"
         android:icon="@drawable/ic_phonelink_off"
         android:visible="true" />
+
+    <item
+        android:title="@string/settings"
+        app:showAsAction="always"
+        android:id="@+id/menu_settings"
+        android:visible="true" />
 </menu>
