--- a/app/app-module/src/main/res/menu/menu_activity_send.xml
+++ b/app/app-module/src/main/res/menu/menu_activity_send.xml
@@ -13,5 +13,6 @@
         android:title="@string/settings"
         app:showAsAction="always"
         android:id="@+id/menu_settings"
-        android:visible="true" />
+        android:visible="true"
+        android:icon="@drawable/ic_settings" />
 </menu>
