--- a/app/app-module/src/main/res/layout/activity_send.xml
+++ b/app/app-module/src/main/res/layout/activity_send.xml
@@ -36,12 +36,13 @@
             android:onClick="repositionMouseCursor"
             android:layout_weight="2" />
 
-        <Button
+        <CheckBox
             android:text="@string/hold_sonsors"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/disableSensorsButton"
-            android:layout_weight="1" />
+            android:id="@+id/holdSensor"
+            android:layout_weight="2" />
+
     </LinearLayout>
 
 </RelativeLayout>
