--- a/app/app-module/src/main/res/layout/activity_discovery.xml
+++ b/app/app-module/src/main/res/layout/activity_discovery.xml
@@ -11,53 +11,29 @@
     tools:context="de.ovgu.softwareprojektapp.DiscoveryActivity">
 
     <ListView
+        android:id="@+id/possibleConnections"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/possibleConnections"
         android:layout_alignParentStart="true"
-        android:headerDividersEnabled="false"
         android:clickable="true"
-        android:layout_above="@+id/device_name_edit_text" />
+        android:headerDividersEnabled="false" />
 
     <ProgressBar
         android:id="@+id/discovery_progress_spinner"
-        android:layout_centerInParent="true"
         style="?android:attr/progressBarStyle"
-        android:visibility="gone"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-    </ProgressBar>
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/startDiscovery"
-        android:elevation="0dp"
-        android:text="Discovery!"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
-
-    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/port_edit_text"
-        android:layout_alignTop="@+id/startDiscovery"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/startDiscovery"
-        android:hint="port (8888 if left free)" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:layout_above="@+id/port_edit_text"
-        android:id="@+id/device_name_edit_text"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:hint="device name" />
+        android:elevation="0dp"
+        android:text="@string/start_discovery" />
 
 </RelativeLayout>
