--- a/app/app-module/src/main/res/layout/activity_discovery.xml
+++ b/app/app-module/src/main/res/layout/activity_discovery.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="de.ovgu.softwareprojektapp.DiscoveryActivity">
+    tools:context="de.ovgu.softwareprojektapp.activities.DiscoveryActivity">
 
     <ListView
         android:id="@+id/possibleConnections"
