--- a/app/app-module/src/main/res/layout/activity_send.xml
+++ b/app/app-module/src/main/res/layout/activity_send.xml
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/repositionMouseCursor"
-            android:onClick="repositionMouseCursor"
+            android:onClick="onReset"
             android:layout_weight="2" />
 
         <CheckBox
