multiple things, todo update

--- a/app/app-module/src/main/res/layout/activity_options.xml
+++ b/app/app-module/src/main/res/layout/activity_options.xml
@@ -40,7 +40,7 @@
     </ScrollView>
 
     <Button
-        android:text="Back"
+        android:text="@string/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
